; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_aiir.c_convert_pd2zp.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_aiir.c_convert_pd2zp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32*, double** }

@M_PI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i32)* @convert_pd2zp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @convert_pd2zp(%struct.TYPE_7__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  %12 = alloca double, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i32 %1, i32* %4, align 4
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  store %struct.TYPE_6__* %15, %struct.TYPE_6__** %5, align 8
  store i32 0, i32* %6, align 4
  br label %16

16:                                               ; preds = %157, %2
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %160

20:                                               ; preds = %16
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i64 %25
  store %struct.TYPE_5__* %26, %struct.TYPE_5__** %7, align 8
  store i32 0, i32* %8, align 4
  br label %27

27:                                               ; preds = %88, %20
  %28 = load i32, i32* %8, align 4
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 0
  %33 = load i32, i32* %32, align 4
  %34 = icmp slt i32 %28, %33
  br i1 %34, label %35, label %91

35:                                               ; preds = %27
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 1
  %38 = load double**, double*** %37, align 8
  %39 = getelementptr inbounds double*, double** %38, i64 0
  %40 = load double*, double** %39, align 8
  %41 = load i32, i32* %8, align 4
  %42 = mul nsw i32 2, %41
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds double, double* %40, i64 %43
  %45 = load double, double* %44, align 8
  store double %45, double* %9, align 8
  %46 = load i32, i32* @M_PI, align 4
  %47 = sitofp i32 %46 to double
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 1
  %50 = load double**, double*** %49, align 8
  %51 = getelementptr inbounds double*, double** %50, i64 0
  %52 = load double*, double** %51, align 8
  %53 = load i32, i32* %8, align 4
  %54 = mul nsw i32 2, %53
  %55 = add nsw i32 %54, 1
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds double, double* %52, i64 %56
  %58 = load double, double* %57, align 8
  %59 = fmul double %47, %58
  %60 = fdiv double %59, 1.800000e+02
  store double %60, double* %10, align 8
  %61 = load double, double* %9, align 8
  %62 = load double, double* %10, align 8
  %63 = call double @cos(double %62) #2
  %64 = fmul double %61, %63
  %65 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %66 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %65, i32 0, i32 1
  %67 = load double**, double*** %66, align 8
  %68 = getelementptr inbounds double*, double** %67, i64 0
  %69 = load double*, double** %68, align 8
  %70 = load i32, i32* %8, align 4
  %71 = mul nsw i32 2, %70
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds double, double* %69, i64 %72
  store double %64, double* %73, align 8
  %74 = load double, double* %9, align 8
  %75 = load double, double* %10, align 8
  %76 = call double @sin(double %75) #2
  %77 = fmul double %74, %76
  %78 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %79 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %78, i32 0, i32 1
  %80 = load double**, double*** %79, align 8
  %81 = getelementptr inbounds double*, double** %80, i64 0
  %82 = load double*, double** %81, align 8
  %83 = load i32, i32* %8, align 4
  %84 = mul nsw i32 2, %83
  %85 = add nsw i32 %84, 1
  %86 = sext i32 %85 to i64
  %87 = getelementptr inbounds double, double* %82, i64 %86
  store double %77, double* %87, align 8
  br label %88

88:                                               ; preds = %35
  %89 = load i32, i32* %8, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %8, align 4
  br label %27

91:                                               ; preds = %27
  store i32 0, i32* %8, align 4
  br label %92

92:                                               ; preds = %153, %91
  %93 = load i32, i32* %8, align 4
  %94 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %95 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %94, i32 0, i32 0
  %96 = load i32*, i32** %95, align 8
  %97 = getelementptr inbounds i32, i32* %96, i64 1
  %98 = load i32, i32* %97, align 4
  %99 = icmp slt i32 %93, %98
  br i1 %99, label %100, label %156

100:                                              ; preds = %92
  %101 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %102 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %101, i32 0, i32 1
  %103 = load double**, double*** %102, align 8
  %104 = getelementptr inbounds double*, double** %103, i64 1
  %105 = load double*, double** %104, align 8
  %106 = load i32, i32* %8, align 4
  %107 = mul nsw i32 2, %106
  %108 = sext i32 %107 to i64
  %109 = getelementptr inbounds double, double* %105, i64 %108
  %110 = load double, double* %109, align 8
  store double %110, double* %11, align 8
  %111 = load i32, i32* @M_PI, align 4
  %112 = sitofp i32 %111 to double
  %113 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %114 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %113, i32 0, i32 1
  %115 = load double**, double*** %114, align 8
  %116 = getelementptr inbounds double*, double** %115, i64 1
  %117 = load double*, double** %116, align 8
  %118 = load i32, i32* %8, align 4
  %119 = mul nsw i32 2, %118
  %120 = add nsw i32 %119, 1
  %121 = sext i32 %120 to i64
  %122 = getelementptr inbounds double, double* %117, i64 %121
  %123 = load double, double* %122, align 8
  %124 = fmul double %112, %123
  %125 = fdiv double %124, 1.800000e+02
  store double %125, double* %12, align 8
  %126 = load double, double* %11, align 8
  %127 = load double, double* %12, align 8
  %128 = call double @cos(double %127) #2
  %129 = fmul double %126, %128
  %130 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %131 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %130, i32 0, i32 1
  %132 = load double**, double*** %131, align 8
  %133 = getelementptr inbounds double*, double** %132, i64 1
  %134 = load double*, double** %133, align 8
  %135 = load i32, i32* %8, align 4
  %136 = mul nsw i32 2, %135
  %137 = sext i32 %136 to i64
  %138 = getelementptr inbounds double, double* %134, i64 %137
  store double %129, double* %138, align 8
  %139 = load double, double* %11, align 8
  %140 = load double, double* %12, align 8
  %141 = call double @sin(double %140) #2
  %142 = fmul double %139, %141
  %143 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %144 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %143, i32 0, i32 1
  %145 = load double**, double*** %144, align 8
  %146 = getelementptr inbounds double*, double** %145, i64 1
  %147 = load double*, double** %146, align 8
  %148 = load i32, i32* %8, align 4
  %149 = mul nsw i32 2, %148
  %150 = add nsw i32 %149, 1
  %151 = sext i32 %150 to i64
  %152 = getelementptr inbounds double, double* %147, i64 %151
  store double %142, double* %152, align 8
  br label %153

153:                                              ; preds = %100
  %154 = load i32, i32* %8, align 4
  %155 = add nsw i32 %154, 1
  store i32 %155, i32* %8, align 4
  br label %92

156:                                              ; preds = %92
  br label %157

157:                                              ; preds = %156
  %158 = load i32, i32* %6, align 4
  %159 = add nsw i32 %158, 1
  store i32 %159, i32* %6, align 4
  br label %16

160:                                              ; preds = %16
  ret void
}

; Function Attrs: nounwind
declare dso_local double @cos(double) #1

; Function Attrs: nounwind
declare dso_local double @sin(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
